--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -55,4 +55,7 @@
     <string name="view_report">View report</string>
     <string name="smart_report">Smart Report</string>
     <string name="details">Details</string>
+    <string name="take_photo">Take Photo</string>
+    <string name="choose_from_gallery">Choose from Gallery</string>
+    <string name="select_image">Select Image</string>
 </resources>
